# alg2

./: CMakeLists.txt  README.md  cmclean  main.cpp  rational.hpp
alg2/: complex.hpp  io.hpp  math.hpp  matrix.hpp  quaternion.hpp  rational.hpp  vector.hpp
alg2/config/: config.hpp
alg2/details/alg/: container.hpp  euclidean_container.hpp  linear_container.hpp  linear_container2.hpp  linear_container3.hpp  linear_container4.hpp  linear_double_container.hpp  matrix.hpp  vector.hpp
alg2/details/hypercomplex/: complex.hpp  quaternion.hpp
alg2/details/math/: abs.hpp  sqrt.hpp  trig.hpp
alg2/details/rational/: rational.hpp
alg2/utility/: composition.hpp  constant.hpp  function.hpp  index_sequence.hpp  matrix.hpp  operator.hpp  primitive.hpp  vector.hpp
buildm1xcode/: CMakeCache.txt  cmake_install.cmake
buildm1xcode/CMakeScripts/: ReRunCMake.make
buildm1xcode/DerivedData/ModuleCache.noindex/: Session.modulevalidation
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Auxiliary/Swift/: main.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Auxiliary/_Concurrency/: main.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Auxiliary/_StringProcessing/: main.plist  metadata.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/CFNetwork/: main.plist  swift-imported.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/Combine/: swift-overlay.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/CoreFoundation/: main.plist  swift-imported.plist  swift-overlay.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/CoreGraphics/: main.plist  swift-imported.plist  swift-overlay.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/CoreServices/: main.plist  swift-imported.plist
buildm1xcode/DerivedData/SymbolCache.noindex/MacOSX13.3.sdk (22E245)/Frameworks/IOKit/: main.plist  (+2 more)
buildm1xcode/DerivedData/alg2/: info.plist
buildm1xcode/DerivedData/alg2/Logs/Launch/: LogStoreManifest.plist
buildm1xcode/DerivedData/alg2/Logs/Notices/: 128C4E27-8109-40DB-B577-4211C7C8492F.xcactivitylog  1FEA4061-3088-4A5A-BD8D-76436FA1F44B.xcactivitylog  2623ADE5-9865-407E-826C-99CEE9467B50.xcactivitylog  30FB0DAF-1C6E-4D90-BC80-1950BC647818.xcactivitylog  71163BE0-6062-4B31-AA0C-E744426440F3.xcactivitylog  795E1910-6704-4339-B124-993BFCECB38F.xcactivitylog  82CF2B7D-C052-49D4-8171-A265FD1B703E.xcactivitylog  9D6025D4-DEB9-4AAC-8219-62180B89C464.xcactivitylog  F63714B4-473A-4973-B5E9-6C738F604CA4.xcactivitylog  LogStoreManifest.plist
buildm1xcode/DerivedData/alg2/TextIndex/: TextFragmentIndex-v8.idx
buildm1xcode/alg2.xcodeproj/: project.pbxproj
buildm1xcode/alg2.xcodeproj/project.xcworkspace/xcuserdata/sakura.xcuserdatad/: UserInterfaceState.xcuserstate
buildm1xcode/alg2.xcodeproj/xcuserdata/sakura.xcuserdatad/xcschemes/: xcschememanagement.plist
buildm1xcode/examples/: cmake_install.cmake
buildm1xcode/examples/Debug/: algebra  experimental  hypercomplex_number
buildm1xcode/hdr/: cmake_install.cmake
config/: config.hpp
details/: rational.hpp
examples/: CMakeLists.txt  algebra.cpp  experimental.cpp  hypercomplex_number.cpp
hdr/: CMakeLists.txt
hdr/alg2/: complex.hpp  math.hpp  matrix.hpp  quaternion.hpp  rational.hpp  utility.hpp  vector.hpp
hdr/alg2/config/: config.hpp  exception.hpp
hdr/alg2/details/alg/: euclidean_container.hpp  linear_container.hpp  linear_double_container.hpp  vector.hpp
hdr/alg2/details/hypercomplex/: complex.hpp  quaternion.hpp
hdr/alg2/details/math/: abs.hpp  log.hpp  sqrt.hpp  trig.hpp
hdr/alg2/details/rational/: rational.hpp
hdr/alg2/util/: composition.hpp  conditional.hpp  constant.hpp  enable_if.hpp  expression.hpp  function.hpp  index_sequence.hpp  matrix.hpp  operator.hpp  primitive.hpp  traits.hpp  types.hpp  vector.hpp
test/: CMakeLists.txt  test.cpp
(+255 files in other folders)
